# python-env-secrets

./: .gitignore  README.md  pyproject.toml
examples/: README.md  basic_usage.py  dotenv_integration.py  fastapi_app.py
src/python_env_secrets/: __init__.py  cli.py  manager.py
tests/: test_cli.py  test_manager.py
