[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-env-secrets"
version = "0.1.0"
description = "Keep sensitive configuration out of your project directory during local development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = [
    "secrets",
    "env",
    "dotenv",
    "configuration",
    "security",
    "environment-variables",
    "development",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.scripts]
user-secrets = "python_env_secrets.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/python-env-secrets"
Documentation = "https://github.com/yourname/python-env-secrets#readme"
Repository = "https://github.com/yourname/python-env-secrets"
Issues = "https://github.com/yourname/python-env-secrets/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/python_env_secrets"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
